public class TransferenciaInvalidaException extends Exception { // Apenas Exception
    public TransferenciaInvalidaException(String mensagem) {
        super(mensagem);
    }
}